# BotballDashboard

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  done.md  projektbeschreibung.md  self-improvement.md  todo.md
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_score_sheet_templates.py  0002_auth_module.py  0003_seasons_module.py  0004_teams_module.py  0005_scoring_module.py  0006_paper_review_module.py  0007_printing_module.py  0008_dashboard_module.py  0009_competition_modules.py
backend/core/: audit.py  auth.py  config.py  database.py  exceptions.py  logging.py  notifications.py
backend/modules/auth/: models.py  routes.py  schemas.py  service.py
backend/modules/dashboard/: models.py  routes.py
backend/modules/exports/: pdf_builder.py  routes.py
backend/modules/paper_review/: models.py  routes.py  schemas.py  service.py
backend/modules/printing/: crypto.py  models.py  routes.py  schemas.py  service.py
backend/modules/scoring/: __init__.py  competition_models.py  competition_schemas.py  competition_service.py  manifest.json  models.py  routes.py  schemas.py  service.py
backend/modules/scoring/score_sheets/: models.py  routes.py  schemas.py  service.py
backend/modules/seasons/: models.py  routes.py  schemas.py  service.py
backend/modules/teams/: models.py  routes.py  schemas.py  service.py
backend/scripts/: create_admin.py  migrate-then-start.sh
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_scoring_routes.py  test_seasons_teams.py
backend/tests/unit/: test_auth.py  test_paper_review.py  test_printing_quota.py  test_scoring.py
docs/: auftrag.md  done.md  open-questions.md  todo.md
docs/assets/: Results 2025.xlsx
docs/documentation/: index.md
docs/modules/: 01-infrastruktur.md  02-auth.md  03-saisonverwaltung.md  04-teamverwaltung.md  05-scoring.md  06-paper-review.md  07-3d-druck.md  08-dashboard.md  09-mobile-pwa.md  10-testing.md  (+1 more)
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
scripts/: proxmox-setup.sh
(+56 files in other folders)
