[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "botball-dashboard-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ─────────────────────────────────────────
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",

    # ── Database ──────────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",

    # ── Validation ────────────────────────────────────────────
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "email-validator==2.1.1",

    # ── Auth ──────────────────────────────────────────────────
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # ── Redis / task queue ────────────────────────────────────
    "redis[hiredis]==5.0.4",
    "celery==5.4.0",

    # ── Email ─────────────────────────────────────────────────
    "aiosmtplib==3.0.1",
    "sendgrid==6.11.0",
    "jinja2==3.1.4",

    # ── Web Push ──────────────────────────────────────────────
    "pywebpush==2.0.0",

    # ── 3D Print / encryption ─────────────────────────────────
    "cryptography==42.0.7",
    "httpx==0.27.0",

    # ── OCR / file handling ───────────────────────────────────
    "aiofiles==23.2.1",
    "python-magic==0.4.27",

    # ── Structured logging ────────────────────────────────────
    "structlog==24.1.0",

    # ── WebSocket ─────────────────────────────────────────────
    "websockets==12.0",

    # ── PDF Export ────────────────────────────────────────────
    "reportlab==4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "aiosqlite==0.20.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "factory-boy==3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
